--- a/PuppyApp/main.html
+++ b/PuppyApp/main.html
@@ -18,7 +18,7 @@
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
-
+    <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -441,17 +441,109 @@
                                 <div class="form-group">
                                     <label class="col-lg-2 control-label" for="eventWhen">When</label>
                                     <div class="col-lg-9">
-                                        <input type="date" class="form-control" id="eventWhen">
+                                        <!--<input type="date" class="form-control" id="eventWhen" >-->
+                                        <div class="datepicker fuelux" id="myDatepicker">
+                                            <div class="input-group">
+                                                <input class="form-control" id="myDatepickerInput" type="text" />
+                                                <div class="input-group-btn">
+                                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                                        <span class="fa fw fa-calendar"></span>
+                                                        <span class="sr-only">Toggle Calendar</span>
+                                                    </button>
+                                                    <div class="dropdown-menu dropdown-menu-right datepicker-calendar-wrapper" role="menu">
+                                                        <div class="datepicker-calendar">
+                                                            <div class="datepicker-calendar-header">
+                                                                <button type="button" class="prev"><span class="glyphicon glyphicon-chevron-left"></span><span class="sr-only">Previous Month</span></button>
+                                                                <button type="button" class="next"><span class="glyphicon glyphicon-chevron-right"></span><span class="sr-only">Next Month</span></button>
+                                                                <button type="button" class="title" data-month="11" data-year="2014">
+                                                                    <span class="month">
+                                                                        <span data-month="0">January</span>
+                                                                        <span data-month="1">February</span>
+                                                                        <span data-month="2">March</span>
+                                                                        <span data-month="3">April</span>
+                                                                        <span data-month="4">May</span>
+                                                                        <span data-month="5">June</span>
+                                                                        <span data-month="6">July</span>
+                                                                        <span data-month="7">August</span>
+                                                                        <span data-month="8">September</span>
+                                                                        <span data-month="9">October</span>
+                                                                        <span data-month="10">November</span>
+                                                                        <span data-month="11" class="current">December</span>
+                                                                    </span> <span class="year">2014</span>
+                                                                </button>
+                                                            </div>
+                                                            <table class="datepicker-calendar-days">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th>Su</th>
+                                                                        <th>Mo</th>
+                                                                        <th>Tu</th>
+                                                                        <th>We</th>
+                                                                        <th>Th</th>
+                                                                        <th>Fr</th>
+                                                                        <th>Sa</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody></tbody>
+                                                            </table>
+                                                            <div class="datepicker-calendar-footer">
+                                                                <button type="button" class="datepicker-today">Today</button>
+                                                            </div>
+                                                        </div>
+                                                        <div class="datepicker-wheels" aria-hidden="true">
+                                                            <div class="datepicker-wheels-month">
+                                                                <h2 class="header">Month</h2>
+                                                                <ul>
+                                                                    <li data-month="0"><button type="button">Jan</button></li>
+                                                                    <li data-month="1"><button type="button">Feb</button></li>
+                                                                    <li data-month="2"><button type="button">Mar</button></li>
+                                                                    <li data-month="3"><button type="button">Apr</button></li>
+                                                                    <li data-month="4"><button type="button">May</button></li>
+                                                                    <li data-month="5"><button type="button">Jun</button></li>
+                                                                    <li data-month="6"><button type="button">Jul</button></li>
+                                                                    <li data-month="7"><button type="button">Aug</button></li>
+                                                                    <li data-month="8"><button type="button">Sep</button></li>
+                                                                    <li data-month="9"><button type="button">Oct</button></li>
+                                                                    <li data-month="10"><button type="button">Nov</button></li>
+                                                                    <li data-month="11"><button type="button">Dec</button></li>
+                                                                </ul>
+                                                            </div>
+                                                            <div class="datepicker-wheels-year">
+                                                                <h2 class="header">Year</h2>
+                                                                <ul></ul>
+                                                            </div>
+                                                            <div class="datepicker-wheels-footer clearfix">
+                                                                <button type="button" class="btn datepicker-wheels-back"><span class="glyphicon glyphicon-arrow-left"></span><span class="sr-only">Return to Calendar</span></button>
+                                                                <button type="button" class="btn datepicker-wheels-select">Select <span class="sr-only">Month and Year</span></button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+
                                 <div class="form-group">
                                     <label class="col-lg-2 control-label" for="categPet">Your Pets</label>
                                     <div class="col-lg-9">
-                                        <select class="form-control" id="categPet">
+                                        <div class="input-group input-append dropdown combobox" data-initialize="combobox" id="myCombobox">
+                                            <input type="text" class="form-control">
+                                            <div class="input-group-btn">
+                                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                                                <ul class="dropdown-menu dropdown-menu-right">
+                                                    <li data-value="0"><a href="#">One</a></li>
+                                                    <li data-value="1"><a href="#">Pet Name 1</a></li>
+                                                    <li data-value="2"><a href="#">Pet Name 2</a></li>
+                                                    <li data-value="3"><a href="#">Pet Name 3</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <!--<select class="form-control" id="categPet">
                                             <option class="item">Pet Name 1</option>
                                             <option class="item">Pet Name 2</option>
                                             <option class="item">Pet Name 3</option>
-                                        </select>
+                                        </select>-->
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -459,8 +551,8 @@
                                     <div class="col-lg-9">
                                         <input type="date" class="form-control" id="eventLocation">
                                     </div>
-                                </div>   
-                                <!-- Map Help -->      
+                                </div>
+                                <!-- Map Help -->
                                 <div class="form-group">
                                     <label class="col-lg-2 control-label" for="eventWhen">Preview Location</label>
                                     <div class="col-lg-9">
@@ -468,7 +560,7 @@
                                             <!--Maps Goes Here-->
                                         </div>
                                     </div>
-                                </div>                
+                                </div>
                                 <!-- Buttons -->
                                 <div class="col-lg-offset-1 col-lg-10">
                                     <hr />
@@ -509,7 +601,7 @@
                     </div>
                     <!-- /.container-fluid -->
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -595,11 +687,15 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="Scripts/jquery-1.10.2.min.js"></script>
     <script src="Scripts/bootstrap.js"></script>
+    <script src="Scripts/knockout-3.4.0.debug.js"></script>
+    <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
     <!-- Custom JavaScript -->
     <script src="Scripts/scrollTo.js"></script>
+    <script src="Scripts/app.js"></script>
+    <script src="Scripts/dashboard.js"></script>
     <script>
         function getMarkers() {
             var addressPoints = [
@@ -686,12 +782,36 @@
         }
 
         function showExploreMap() {
-            var map = L.mapbox.map('exploreMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' } })
+            var map = L.mapbox.map('exploreMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' }, zindex: 1})
                             .setView([-27.36616489612778, -55.89320182800293], 13);
 
             var markers = getMarkers();
 
             map.addLayer(markers);
+        }
+
+        function showActivityMap() {
+            var map = L.mapbox.map('activityMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' } })
+                .setView([-27.36616489612778, -55.89320182800293], 15);
+
+            dashVM.recentHistoryEvents.subscribe(function (newPoints) {
+                // convert newvalue to markers
+                var markers = new L.MarkerClusterGroup();
+
+                for (var i = 0; i < newPoints.length; i++) {
+                    var point = newPoints[i];
+                    var marker = L.marker(new L.LatLng(point.Latitude, point.Longitude), {
+                        icon: L.mapbox.marker.icon({ 'marker-symbol': 'dog-park', "marker-size": "large", 'marker-color': '#FF8000' }),
+                        title: point.Title
+                    });
+                    marker.bindPopup(point.Title);
+                    markers.addLayer(marker);
+                }
+
+                map.addLayer(markers);
+            });
+
+            dashVM.loadRecentEvents();
         }
 
         function showPane(source, strPane) {
@@ -711,7 +831,7 @@
             } else if (strPane == 'eventpane') {
                 showEventMap();
             }
-            
+
             // scroll to top
             scrollTo(document.documentElement, 0, 500);
             // On mobile colapse menu
@@ -737,14 +857,18 @@
             event.preventDefault();
         }
 
+        var dashVM = null;
+
         $(document).ready(function () {
+            // bind initially VM to HTMLBody
+            dashVM = new dashboardViewModel()
+            ko.applyBindings(dashVM);
+            // set my access token in order to show maps
             L.mapbox.accessToken = 'pk.eyJ1IjoicGFjaGlmbHllciIsImEiOiJjaW4zdmwydWswYnphdjdrazRwcWY5enU1In0.U5Z6syz8o-TcXv2uR6Qqug';
-            var map = L.mapbox.map('activityMap', 'mapbox.streets', { tileLayer: { format: 'jpg70' } })
-                .setView([-27.36616489612778, -55.89320182800293], 15);
 
-            var markers = getMarkers();
-
-            map.addLayer(markers);
+            showActivityMap();
+            // another initialization
+            $('#myDatepicker').datepicker();
         });
     </script>
 </body>
